--- a/.github/workflows/.swiftlint.yaml
+++ b/.github/workflows/.swiftlint.yaml
@@ -1,39 +1,37 @@
 # SwiftLint Configuration File
 
-disabled_rules: # rule identifiers to exclude from running
-  # errors
-  - cyclomatic_complexity
-  - identifier_name
-  - function_body_length
-  - force_cast
-  - force_try
-  - line_length
-  - file_length
-  - type_body_length
-  # warnings 
-  - trailing_comma
-  - todo
-  - orphaned_doc_comment
-  - opening_brace
-  - blanket_disable_command
-  - for_where
-  - trailing_whitespace
-  - vertical_whitespace
-  - void_function_in_ternary
-  - empty_enum_arguments
-  - closure_parameter_position
+
+# To be tailored to reflect projects ideal linting configuration
+
+# disabled_rules:
+#   ERRORS IN PROJECT CURRENTLY
+#   - cyclomatic_complexity
+#   - identifier_name
+#   - function_body_length
+#   - force_cast
+#   - force_try
+#   - line_length
+#   - file_length
+#   - type_body_length
+#   WARNINGS IN PROJECT CURRENTLY
+#   - trailing_comma
+#   - todo
+#   - orphaned_doc_comment
+#   - opening_brace
+#   - blanket_disable_command
+#   - for_where
+#   - trailing_whitespace
+#   - vertical_whitespace
+#   - void_function_in_ternary
+#   - empty_enum_arguments
+#   - closure_parameter_position
 
 
-
-#identifier_name:
-#  min_length: 
-#    warning: 1
-#    error: 0  
-#  max_length: 
-#    warning: 40
-#    error: 41  
-#
-#line_length:
-#  warning:
+# change individual rule configurations
+identifier_name:
+  min_length: 1
+  max_length: 
+    warning: 40
+    error: 41  
 
 
