--- a/.github/workflows/pr_swift_lint.yaml
+++ b/.github/workflows/pr_swift_lint.yaml
@@ -33,30 +33,39 @@ jobs:
         run: |
           set +e
           swiftlint lint --reporter json --config /Users/runner/work/Scribe-iOS/Scribe-iOS/.github/workflows/.swiftlint.yaml > swiftlint-results.json
-          set -e
           
           # Verify the JSON output exists and is not empty
           if [ ! -f swiftlint-results.json ] || [ ! -s swiftlint-results.json ]; then
             echo "SwiftLint did not produce output or the output is empty."
             exit 1
           fi
+
+          echo
+          echo
+        
+          # Formatting and printing warnings
+          echo "Warnings:"
+          warnings_count=$(jq -r '.[] | select(.severity == "Warning") | "\(.file):\(.line): warning: (\(.rule_id)) \(.reason)"' swiftlint-results.json | wc -l)
+          jq -r '.[] | select(.severity == "Warning") | "\(.file):\(.line): warning: (\(.rule_id)) \(.reason)"' swiftlint-results.json
+
+          echo
+          echo
           
           # Formatting and printing errors
           echo "Errors:"
           errors_count=$(jq -r '.[] | select(.severity == "Error") | "\(.file):\(.line): error: (\(.rule_id)) \(.reason)"' swiftlint-results.json | wc -l)
           jq -r '.[] | select(.severity == "Error") | "\(.file):\(.line): error: (\(.rule_id)) \(.reason)"' swiftlint-results.json
           
-          # Formatting and printing warnings
-          echo "Warnings:"
-          warnings_count=$(jq -r '.[] | select(.severity == "Warning") | "\(.file):\(.line): warning: (\(.rule_id)) \(.reason)"' swiftlint-results.json | wc -l)
-          jq -r '.[] | select(.severity == "Warning") | "\(.file):\(.line): warning: (\(.rule_id)) \(.reason)"' swiftlint-results.json
-      
           # Printing summary of counts
-          echo "Summary:"
-          echo "Total Errors: $errors_count"
+          echo
+          echo
+          
+          echo "---- Summary ----"
           echo "Total Warnings: $warnings_count"
+          echo "Total Errors:  $errors_count"
 
-    
+          echo
+          
           if [ "$errors_count" -gt 0 ]; then
             echo "SwiftLint found errors." # Won't show message because exits immediatly
             exit 2
