--- a/.github/workflows/pr_swift_lint.yaml
+++ b/.github/workflows/pr_swift_lint.yaml
@@ -40,16 +40,16 @@ jobs:
             exit 1
           fi
 
-          echo
-          echo
+          echo " "
+          echo " "
         
           # Formatting and printing warnings
           echo "Warnings:"
           warnings_count=$(jq -r '.[] | select(.severity == "Warning") | "\(.file):\(.line): warning: (\(.rule_id)) \(.reason)"' swiftlint-results.json | wc -l)
           jq -r '.[] | select(.severity == "Warning") | "\(.file):\(.line): warning: (\(.rule_id)) \(.reason)"' swiftlint-results.json
 
-          echo
-          echo
+          echo " "
+          echo " "
           
           # Formatting and printing errors
           echo "Errors:"
@@ -57,19 +57,19 @@ jobs:
           jq -r '.[] | select(.severity == "Error") | "\(.file):\(.line): error: (\(.rule_id)) \(.reason)"' swiftlint-results.json
           
           # Printing summary of counts
-          echo
-          echo
+          echo " "
+          echo " "
           
-          echo "---- Summary ----"
+          echo "-------- Summary --------"
           echo "Total Warnings: $warnings_count"
           echo "Total Errors:  $errors_count"
 
-          echo
+          echo " "
           
           if [ "$errors_count" -gt 0 ]; then
             echo "SwiftLint found errors." # Won't show message because exits immediatly
             exit 2
-          elif [ "$warnings_count" -gt 0 ];
+          elif [ "$warnings_count" -gt 0 ]; then
             echo "SwiftLint found warnings." # Can change message to be more reflective of what needs to be conveyed
             # exit 1         #Uncomment to enforce warnings
           else
