--- a/.github/workflows/pr_swift_lint.yaml
+++ b/.github/workflows/pr_swift_lint.yaml
@@ -44,7 +44,7 @@ jobs:
           echo " "
         
           # Formatting and printing warnings
-          echo "Warnings:"
+          echo "WARNINGS:"
           warnings_count=$(jq -r '.[] | select(.severity == "Warning") | "\(.file):\(.line): warning: (\(.rule_id)) \(.reason)"' swiftlint-results.json | wc -l)
           jq -r '.[] | select(.severity == "Warning") | "\(.file):\(.line): warning: (\(.rule_id)) \(.reason)"' swiftlint-results.json
 
@@ -52,12 +52,11 @@ jobs:
           echo " "
           
           # Formatting and printing errors
-          echo "Errors:"
+          echo "ERRORS:"
           errors_count=$(jq -r '.[] | select(.severity == "Error") | "\(.file):\(.line): error: (\(.rule_id)) \(.reason)"' swiftlint-results.json | wc -l)
           jq -r '.[] | select(.severity == "Error") | "\(.file):\(.line): error: (\(.rule_id)) \(.reason)"' swiftlint-results.json
           
           # Printing summary of counts
-          echo " "
           echo " "
           
           echo "-------- Summary --------"
@@ -67,7 +66,7 @@ jobs:
           echo " "
           
           if [ "$errors_count" -gt 0 ]; then
-            echo "SwiftLint found errors." # Won't show message because exits immediatly
+            echo "SwiftLint found errors." # Can change message to be more reflective of what needs to be conveyed
             exit 2
           elif [ "$warnings_count" -gt 0 ]; then
             echo "SwiftLint found warnings." # Can change message to be more reflective of what needs to be conveyed
