--- a/.github/workflows/.swiftlint.yaml
+++ b/.github/workflows/.swiftlint.yaml
@@ -14,17 +14,17 @@ disabled_rules:
    - file_length
    - type_body_length
 #   WARNINGS IN PROJECT CURRENTLY
-#   - trailing_comma
-#   - todo
-#   - orphaned_doc_comment
-#   - opening_brace
-#   - blanket_disable_command
-#   - for_where
-#   - trailing_whitespace
-#   - vertical_whitespace
-#   - void_function_in_ternary
-#   - empty_enum_arguments
-#   - closure_parameter_position
+   - trailing_comma
+   - todo
+   - orphaned_doc_comment
+   - opening_brace
+   - blanket_disable_command
+   - for_where
+   - trailing_whitespace
+   - vertical_whitespace
+   - void_function_in_ternary
+   - empty_enum_arguments
+   - closure_parameter_position
 
 
 # change individual rule configurations
