--- a/.github/workflows/.swiftlint.yaml
+++ b/.github/workflows/.swiftlint.yaml
@@ -3,16 +3,16 @@
 
 # To be tailored to reflect projects ideal linting configuration
 
-disabled_rules:
+#disabled_rules:
 #   ERRORS IN PROJECT CURRENTLY
-   - cyclomatic_complexity
-   - identifier_name
-   - function_body_length
-   - force_cast
-   - force_try
-   - line_length
-   - file_length
-   - type_body_length 
+#   - cyclomatic_complexity
+#   - identifier_name
+#   - function_body_length
+#   - force_cast
+#   - force_try
+#   - line_length
+#   - file_length
+#   - type_body_length 
 #   WARNINGS IN PROJECT CURRENTLY (excluding those already listed as errors)
 #   - trailing_comma
 #   - todo
