--- a/.github/workflows/pr_swiftlint.yaml
+++ b/.github/workflows/pr_swiftlint.yaml
@@ -1,4 +1,4 @@
-name: pr_swift_lint
+name: pr_swiftlint
 on:
   pull_request_target:
     branches:
@@ -12,7 +12,8 @@ jobs:
     name: Run SwiftLint
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: GitHub Action for SwiftLint
         uses: norio-nomura/action-swiftlint@3.2.1
