Make swiftlint workflow strict

--- a/.github/workflows/pr_swiftlint.yaml
+++ b/.github/workflows/pr_swiftlint.yaml
@@ -17,3 +17,5 @@ jobs:
 
       - name: GitHub Action for SwiftLint
         uses: norio-nomura/action-swiftlint@3.2.1
+        with:
+          args: --strict
