--- a/Keyboards/LanguageKeyboards/German/German.entitlements
+++ b/Keyboards/LanguageKeyboards/German/German.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.scribe.userDefaultsContainer</string>
+		<string>group.be.scri.userDefaultsContainer</string>
 	</array>
 </dict>
 </plist>
