--- a/Scribe/Resources/Settings.bundle/Root.plist
+++ b/Scribe/Resources/Settings.bundle/Root.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.be.scri.userDefaultsContainer</string>
-	</array>
+	<key>StringsTable</key>
+	<string>Root</string>
+	<key>PreferenceSpecifiers</key>
+	<array/>
 </dict>
 </plist>
