Squashed 'Scribe/i18n/' changes from cd28e5e..d9b2226
d9b2226 Merge pull request #26 from Jag-Marcel/action-fix
0cb65ed Small fix to action for converting jsons to xcstrings

git-subtree-dir: Scribe/i18n
git-subtree-split: d9b22262f3769545a08bd4772cae20caa2f23c67

--- a/.github/workflows/xcstrings_conversion.yml
+++ b/.github/workflows/xcstrings_conversion.yml
@@ -24,7 +24,7 @@ jobs:
           $SourceDiff = $diff | Where-Object { $_ -match '^Scribe-i18n/' -and $_ -match '.json$' }
           $HasDiff = $SourceDiff.Length -gt 0
 
-          Write-Host "json_changed=$HasDiff >> $GITHUB_OUTPUT"
+          Write-Host "json_changed=$HasDiff" >> "$GITHUB_OUTPUT"
 
   # Run xcstrings conversion script if needed.
   conditional_job:
