Setup unit test with first test file

--- a/Scribe.xcodeproj/xcshareddata/xcschemes/Scribe.xcscheme
+++ b/Scribe.xcodeproj/xcshareddata/xcschemes/Scribe.xcscheme
@@ -28,6 +28,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "19100B212C82D56C004F8CF6"
+               BuildableName = "ScribeTests.xctest"
+               BlueprintName = "ScribeTests"
+               ReferencedContainer = "container:Scribe.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
