--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ xcuserdata/
 ## Compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
+*.xcscheme
 
 ## Compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 build/
