--- a/.github/workflows/pr_ci.yaml
+++ b/.github/workflows/pr_ci.yaml
@@ -15,9 +15,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Xcode
-      uses: maxim-lobanov/setup-xcode@v2
-      with:
-        xcode-version: latest
+      uses: sudo xcode-select -switch /Applications/Xcode_15.4.app
 
     - name: Build and Test
       run: |
