Added caching of derived data and run build and test separately

--- a/.github/workflows/pr_ci.yaml
+++ b/.github/workflows/pr_ci.yaml
@@ -17,7 +17,19 @@ jobs:
     - name: Set up Xcode
       run: sudo xcode-select -switch /Applications/Xcode.app
 
-    - name: Build and Test
+    - name: Cache DerivedData
+      uses: actions/cache@v3
+      with:
+        path: ~/Library/Developer/Xcode/DerivedData
+        key: ${{ runner.os }}-xcode-${{ hashFiles('**/*.swift', '**/project.pbxproj') }}
+        restore-keys: |
+          ${{ runner.os }}-xcode-
+
+    - name: Build
       run: |
-        xcodebuild -scheme Scribe -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' clean build test
+        xcodebuild -scheme Scribe -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest' clean build
+
+    - name: Test
+      run: |
+        xcodebuild -scheme Scribe -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest' test
 
