Rename workflow given org conventions

--- a/.github/workflows/pr_ci.yaml
+++ b/.github/workflows/pr_ci.yaml
@@ -1,4 +1,4 @@
-name: Swift Unit Test CI
+name: pr_ci
 
 on:
   pull_request:
@@ -11,24 +11,23 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Xcode
-      run: sudo xcode-select -switch /Applications/Xcode.app
+      - name: Set up Xcode
+        run: sudo xcode-select -switch /Applications/Xcode.app
 
-    - name: Cache DerivedData
-      uses: actions/cache@v3
-      with:
-        path: ~/Library/Developer/Xcode/DerivedData
-        key: ${{ runner.os }}-xcode-${{ hashFiles('**/*.swift', '**/project.pbxproj') }}
-        restore-keys: |
-          ${{ runner.os }}-xcode-
-    - name: Build
-      run: |
-        xcodebuild -scheme Scribe -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' clean build
+      - name: Cache DerivedData
+        uses: actions/cache@v3
+        with:
+          path: ~/Library/Developer/Xcode/DerivedData
+          key: ${{ runner.os }}-xcode-${{ hashFiles('**/*.swift', '**/project.pbxproj') }}
+          restore-keys: |
+            ${{ runner.os }}-xcode-
+      - name: Build
+        run: |
+          xcodebuild -scheme Scribe -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' clean build
 
-    - name: Test
-      run: |
-        xcodebuild -scheme Scribe -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' test
-
+      - name: Test
+        run: |
+          xcodebuild -scheme Scribe -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' test
