--- a/.github/workflows/pr_ci.yaml
+++ b/.github/workflows/pr_ci.yaml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install Swift 6.0.0
+        uses: fwal/setup-swift@v1
+        with:
+          swift-version: '6.0.0'
+
       - name: Set up Xcode
         run: sudo xcode-select -switch /Applications/Xcode.app
 
@@ -24,6 +29,7 @@ jobs:
           key: ${{ runner.os }}-xcode-${{ hashFiles('**/project.pbxproj') }}
           restore-keys: |
             ${{ runner.os }}-xcode-
+
       - name: Build
         run: |
           xcodebuild -scheme Scribe -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' clean build
