--- a/Scribe.xcodeproj/xcshareddata/xcschemes/French.xcscheme
+++ b/Scribe.xcodeproj/xcshareddata/xcschemes/French.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1530"
+   LastUpgradeVersion = "1610"
    version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -73,6 +73,7 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
+      askForAppToLaunch = "Yes"
       launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
