--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: 🐞 Bug report
 description: Report a bug to help us improve Scribe-iOS.
-labels: ["bug"]
+type: "bug"
 projects: ["scribe-org/1"]
 body:
   - type: checkboxes
