Convert coverage processing to Python

--- a/.github/workflows/pr_ci.yaml
+++ b/.github/workflows/pr_ci.yaml
@@ -12,7 +12,7 @@ jobs:
     name: Run Unit Tests
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Xcode
         run: sudo xcode-select -switch /Applications/Xcode.app
@@ -34,7 +34,6 @@ jobs:
           xcodebuild -scheme Scribe -derivedDataPath Build/ -destination 'platform=iOS Simulator,name=iPhone 16,OS=latest' test -enableCodeCoverage YES CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
           xcrun xccov view --report $(find ./Build/Logs/Test -name '*.xcresult') --json > code_coverage.json
 
-      - uses: swift-actions/setup-swift@v2
       - name: Parse Coverage and Print to Terminal
         run: |
-          swift Tests/ProcessCoverageReport.swift code_coverage.json 5
+          python3 Tests/process_coverage_report.py code_coverage.json 5
